CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) 
PROJECT( hnode_acurite5n1d ) 

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/" )

SET( ACRT5N1RTLD_SRC
     ${CMAKE_SOURCE_DIR}/src/acrt5n1d.cpp
     ${CMAKE_SOURCE_DIR}/src/HNodeSensorMeasurement.cpp
     ${CMAKE_SOURCE_DIR}/src/HNodeSEPPacket.cpp
     ${CMAKE_SOURCE_DIR}/src/Acurite5N1RTL433.cpp
)

SET( ACRT5N1D_CLIENT_SRC
     ${CMAKE_SOURCE_DIR}/src/acrt5n1d_client.cpp
     ${CMAKE_SOURCE_DIR}/src/HNodeSensorMeasurement.cpp
     ${CMAKE_SOURCE_DIR}/src/HNodeSEPPacket.cpp
)

SET(CMAKE_BUILD_TYPE Debug)

FIND_PACKAGE(Boost 1.49.0 COMPONENTS program_options system REQUIRED) 
FIND_PACKAGE(LibRTLSDR)

INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${LIBRTLSDR_INCLUDE_DIRS} )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/src )

ADD_EXECUTABLE( acrt5n1rtld ${ACRT5N1RTLD_SRC} ) 
TARGET_LINK_LIBRARIES( acrt5n1rtld "-ldaemon" )
TARGET_LINK_LIBRARIES( acrt5n1rtld ${LIBRTLSDR_LIBRARIES} )

ADD_EXECUTABLE( acrt5n1d_client ${ACRT5N1D_CLIENT_SRC} ) 
TARGET_LINK_LIBRARIES( acrt5n1d_client ${Boost_LIBRARIES} )

